<?xml version="1.0"?>
<package format="2">
  <name>topics</name>
  <version>0.1.0</version>
  <description>
    Sample package demonstrating basic ROS nodes, ROS topics, and the ROS
    publisher-subscriber model.
  </description>

  <maintainer email="dev@anassinator.com">Anass Al</maintainer>
  <license>MIT</license>

  <author email="dev@anassinator.com">Anass Al</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
